Closed Bug 785274 Opened 12 years ago Closed 12 years ago

Should return the error of CreateUnique in nsFolderCompactState::Init().

Categories

(MailNews Core :: Backend, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 19.0

People

(Reporter: hiro, Assigned: hiro)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Attached patch FixSplinter Review
See bug 784888 c#3.
Attachment #654872 - Flags: review?(mbanner)
Blocks: 784888
Comment on attachment 654872 [details] [diff] [review]
Fix

Review of attachment 654872 [details] [diff] [review]:
-----------------------------------------------------------------

Sorry for the delay, looks good.
Attachment #654872 - Flags: review?(mbanner) → review+
Assignee: nobody → hiikezoe
Keywords: checkin-needed
https://hg.mozilla.org/comm-central/rev/2767398c5337
Status: NEW → RESOLVED
Closed: 12 years ago
Flags: in-testsuite-
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 19.0
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: