Bug 785274 - Return the error of CreateUnique in nsFolderCompactState::Init(). r=mbanner